# kamel

./: .gitignore  Cargo.toml  README.md
crates/kamel/: Cargo.toml
crates/kamel-bevy/: Cargo.toml
crates/kamel-bevy/src/: lib.rs
crates/kamel-game/: Cargo.toml
crates/kamel-game/src/: main.rs
crates/kamel-render/: Cargo.toml
crates/kamel-render/src/backend/: device.rs  instance.rs  mod.rs  surface.rs
crates/kamel-render/src/backend/command/: command_buffer.rs  command_pool.rs  mod.rs
crates/kamel-render/src/backend/sync/: binary_semaphore.rs  fence.rs  mod.rs  timeline_semaphore.rs
crates/kamel-render/src/backend/util/: debug_utils.rs  message_severity.rs  mod.rs  timeline_semaphore.rs
crates/kamel/src/: default_plugins.rs  lib.rs
